Fixed Shlink logo not being vertically aligned in welcome screen

--- a/src/common/Home.scss
+++ b/src/common/Home.scss
@@ -12,8 +12,16 @@
   }
 }
 
+.home__logo-wrapper {
+  padding: 1.5rem !important;
+  height: 100% !important;
+  min-height: 300px;
+}
+
 .home__logo {
   @include vertical-align();
+
+  width: calc(100% - 3rem);
 }
 
 .home__main-card {
